@@ -1,10 +1,10 @@
 --extra-index-url https://pypi.anaconda.org/OpenEye/simple
-OpenEye-toolkits >= 2022.2.2
+OpenEye-toolkits == 2022.2.2
 fastapi == 0.68.0
 # pydantic == 1.7.4
 gunicorn == 20.0.4
 rcsb.utils.io >= 1.17
-rcsb.utils.chem >= 0.73
+rcsb.utils.chem >= 0.83,<1.0
 
 #
 # Used by FastAPI / Starlette / Pydantic:
